# godot-box3d

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  SConstruct  VALIDATION_REPORT.md
.github/workflows/: build.yml  headless-tests.yml  portable-release.yml
cmake/: GodotBox3DExternalGodotCpp.cmake
docs/: reference_porting_roadmap.md  timewarp_tooling_direction.md
scripts/: run_headless_tests.sh  verify_port.py
src/misc/: box3d_collision_filter.hpp  box3d_shape_proxy.cpp  box3d_shape_proxy.hpp  type_conversions.hpp
src/objects/: box3d_body_impl_3d.cpp  box3d_body_impl_3d.hpp  box3d_object_impl_3d.hpp  box3d_physics_direct_body_state_3d.cpp  box3d_shaped_object_impl_3d.cpp  box3d_shaped_object_impl_3d.hpp
src/servers/: box3d_physics_server_3d.cpp  box3d_physics_server_3d.hpp
src/shapes/: box3d_cylinder_shape_impl_3d.cpp  box3d_cylinder_shape_impl_3d.hpp
src/spaces/: box3d_physics_direct_space_state_3d.cpp  box3d_query_filter_3d.hpp  box3d_space_3d.cpp  box3d_space_3d.hpp
test_project/: backend_activation_test.gd  collision_filter_test.gd  collision_filter_test.gd.uid  determinism_test.gd  joint_test.gd  physics_contract_test.gd  project.godot  ray_pickability_test.gd  review_regression_test.gd
